Swap diff order in tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
           manifest: ${{ matrix.manifest }}.toml
 
       - run: echo '${{ steps.generate.outputs.features }}' >> result.json
-      - run: diff -u result.json ${{ matrix.manifest }}.json
+      - run: diff -u ${{ matrix.manifest }}.json result.json
